# musicidx

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.agents/: AGENTS.md  phases.md
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: App.tsx  index.css  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: LibraryBrowsePanel.tsx
desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  separator.tsx
docs/: desktop-tauri.md  matching.md  packaging-macos.md  ui-json-contracts.md
eval/: matching_regressions.example.json  search_queries.json  search_regressions.json
packaging/: musicidx_cli_entry.py
scripts/: build-macos-all-in-one.sh  build-macos-intel-all-in-one.sh
src/musicidx/: __init__.py  browse.py  chromaprint_frames.py  cli.py  config.py  db.py  derived.py  failures.py  fingerprint.py  health.py  metadata.py  migrations.py  missing.py  profile_documents.py  profiles.py  resources.py  scanner.py  tempo.py
src/musicidx/analyzer/: __init__.py  basic_features.py  embeddings.py  essentia_models.py
src/musicidx/search/: __init__.py  evaluation.py  evidence.py  explain.py  feedback.py  intent.py  llm.py  match_evaluation.py  matching.py  plan.py  ranker.py  taxonomy.py  taxonomy.yaml
tests/: test_basic_features.py  test_browse.py  test_db.py  test_derived.py  test_embeddings.py  test_essentia_models.py  test_failures.py  test_fingerprint.py  test_health.py  test_llm.py  test_matching.py  test_metadata.py  test_missing.py  test_profile_documents.py  test_resources.py  test_scanner.py  test_search.py  test_search_evidence.py  test_search_taxonomy.py  test_tag_subprocess_batches.py  test_tempo.py
