[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicidx"
version = "0.1.0"
description = "Local-first music library index and search CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "numpy>=1.24",
  "soundfile>=0.12",
  "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
ml = [
  "essentia-tensorflow>=2.1b6.dev1389,<2.2",
]
semantic = [
  "sentence-transformers>=3.0",
]

[project.scripts]
musicidx = "musicidx.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
