[package]
name = "musicidx-desktop"
version = "0.1.0"
description = "Cross-platform desktop wrapper for MusicIdx"
authors = ["MusicIdx contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
